--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>atm-spring</groupId>
-    <artifactId>atm-spring</artifactId>
+    <artifactId>atm-spring-code-config</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
